automate.html: fixed issue when lyrics covers UI

--- a/vue/LyricsSystem/0.css
+++ b/vue/LyricsSystem/0.css
@@ -21,7 +21,7 @@ span-lyrics {
   direction: rtl;
   &.done {
     color: var(--lyrics-color);
-    text-shadow: .2vw .2vh 1vw rgba(0,0,0,1);
+    text-shadow: .1vw .1vw 0.4vw rgba(0,0,0,1);
     margin: 0px 0px;
     padding: 10vh 10vw;
   }
